# FitGenius

./: .env  .env.example.  .gitignore  README.md  bot.py  myfitnessbot.db  pyproject.toml  requirements.txt.
app/bot/: __init__.py  main.py
app/bot/i18n/: __init__.py  en.json  es.json  ru.json
app/bot/keyboards/: lang.py  main.py
app/bot/middlewares/: access.py  locale.py
app/bot/routers/: auth.py  lang.py  navigation.py  payments.py  programs.py  workouts.py
app/bot/state/: user_prefs.py
app/bot/utils/: animations.py  buttons.py
app/core/: config.py
app/domain/models/: exercise.py  goal.py  payment.py  photo_report.py  program.py  subscription.py  user.py  user_exercise.py  workout_log.py
app/domain/services/: banner_service.py  catalog_service.py  payments_service.py  phrases_service.py  trial_service.py  workouts_service.py
app/infra/content/: loader.py
app/infra/content/legal/: terms_en.md  terms_es.md  terms_ru.md
app/infra/db/: base.py  session.py
app/infra/web/: fastapi_app.py
app/tasks/: schedulers.py
data/: exercises.csv  levels.json  rewards.csv
newbot/: main.py
newbot/routers/: main_menu.py  utils.py
newbot/ui/: buttons.py
tests/unit/: test_config.py
